Add exports for ClasspathJarNameDetectorTest compilation